context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.7/tasks/mvp_tasks_simulation_detail_page.md
# Задачи для детальной страницы Симуляции (Simulation Detail)

## Обзор страницы

**Страница:** Детальная симуляции (Simulation Detail)
**Путь в макете:** Клик на симуляцию из списка → детальная страница
**Статус:** Вне скоупа MVP (уже реализовано, не меняем)

> Примечание по скоупу MVP: симуляции считаем уже реализованными (страницы/API/ЖЦ). В рамках MVP v6.5+ мы симуляции не дорабатываем; этот файл оставлен как справка.

**Примечание (v6.1/Gantt v6):** в Gantt v6 отсутствует отдельная backend-задача `BE-SD1`; план предполагает, что backend-деталка симуляции уже существует (или входит в `BE-S1`). Если это не так, добавить `BE-SD1` в план.

### Что показывает страница (из макета):

**Основная информация:**
- ID симуляции (display_id)
- Название
- Статус (draft/running/completed/failed)
 - Продукт
 - Даты (создания, запуска, завершения)
 - Автор

**Новые блоки для MVP:**
- **Блок артефактов** - список прикрепленных файлов (документы, результаты)
- **Блок связанных сущностей** - связи с Пилотами и Внедрениями через Скоркарты

**Функционал:**
- Просмотр всех полей симуляции
- Загрузка/удаление артефактов
- Просмотр связанных Пилотов (через Скоркарты)
- Просмотр связанных Внедрений (через Скоркарты)
- Переход к связанным сущностям (клик → детальная)

**Права доступа:**
- ПРМ видит симуляции своего продукта
- Методолог видит все симуляции
- Админ видит все симуляции

---

## AN-SD1: Аналитика детальной страницы Симуляции

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 1 день

### Summary
Детализация требований для адаптации детальной страницы Симуляции с добавлением блоков артефактов и связанных сущностей

### Description

Провести аналитику для адаптации детальной страницы Симуляции:

1. **Детализация бизнес-требований:**
   - Определить правила отображения артефактов
   - Уточнить логику связей через Скоркарты
   - Определить правила доступа к артефактам
   - Уточнить форматы файлов для артефактов

2. **Спецификация UI/UX:**
   - Дизайн блока артефактов (список, загрузка, удаление)
   - Дизайн блока связанных сущностей (Пилоты, Внедрения)
   - Спецификация навигации к связанным сущностям

3. **Спецификация API контракта:**
   - GET /api/simulations/{id}/ - детальная информация
   - GET /api/simulations/{id}/artifacts/ - список артефактов
   - POST /api/simulations/{id}/artifacts/ - загрузка артефакта
   - DELETE /api/simulations/{id}/artifacts/{artifact_id}/ - удаление артефакта
   - GET /api/simulations/{id}/related/ - связанные сущности

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Правила доступа определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация детальной страницы Симуляции" (markdown/confluence)
- API контракт для артефактов и связанных сущностей

---

## BE-SD1: Backend для детальной страницы Симуляции

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 4 дня

### Summary
Адаптация Backend для детальной страницы Симуляции с добавлением артефактов и связанных сущностей

### Description

Адаптировать Backend для детальной страницы Симуляции:

1. **API Endpoint: GET /api/simulations/{id}/**

   **Обновление ответа:**
   ```json
   {
     "id": "uuid",
     "display_id": "SIM-001",
     "name": "Симуляция оптимизации лимитов",
     "status": "completed",
     "deployment": {
       "id": "uuid",
       "display_id": "DEP-001",
       "name": "Оптимизация риск-стратегии Premium карт"
     },
     "product": {
       "id": "uuid",
       "name": "Кредитная карта Premium"
     },
     "created_at": "2026-03-01T10:00:00Z",
     "started_at": "2026-03-02T10:00:00Z",
     "completed_at": "2026-03-05T15:00:00Z",
     "created_by": {
       "id": "uuid",
       "full_name": "Иванов Иван Иванович"
     },
     "artifacts_count": 3,
     "related_pilots_count": 2,
     "related_changes_count": 1
   }
   ```

2. **API Endpoint: GET /api/simulations/{id}/artifacts/**

   **Формат ответа:**
   ```json
   {
     "count": 3,
     "results": [
       {
         "id": "uuid",
         "name": "Результаты симуляции",
         "type": "other",
         "url": "https://...",
         "created_at": "2026-03-05T15:00:00Z",
         "created_by": {
           "id": "uuid",
           "full_name": "Иванов Иван Иванович"
         }
       }
     ]
   }
   ```

3. **API Endpoint: POST /api/simulations/{id}/artifacts/**

   **Параметры запроса (JSON):**
   ```json
   {
     "name": "Результаты симуляции",
     "type": "other",
     "url": "https://..."
   }
   ```

   **Бизнес-логика:**
   - Артефакты это URL-ссылки (см. spec БП-11 и `BE-ART1`)
   - Валидация: name обязателен
   - Валидация: type один из (business_case/rov/other)
   - Валидация: url валидный URL
   - Создание записи Artifact

4. **API Endpoint: DELETE /api/simulations/{id}/artifacts/{artifact_id}/**

   **Бизнес-логика:**
   - Валидация: пользователь имеет право удалять (автор или админ)
   - Удаление записи Artifact

5. **API Endpoint: GET /api/simulations/{id}/related/**

   **Формат ответа:**
   ```json
   {
     "pilots": [
       {
         "id": "uuid",
         "display_id": "PLT-001",
         "name": "Пилот Premium Q1 2026",
         "status": "active",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ],
     "changes": [
       {
         "id": "uuid",
        "display_id": "DEP-001",
         "name": "Внедрение новой скоркарты Premium",
         "status": "approved",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ]
   }
   ```

6. **Права доступа:**
   - Просмотреть может: ПРМ (свой продукт), Методолог, Админ
   - Добавить артефакт (ссылку) может: ПРМ (свой продукт), Методолог, Админ
   - Удалить артефакт может: автор артефакта, Админ

### Acceptance Criteria

- [ ] GET /api/simulations/{id}/ обновлен
- [ ] GET /api/simulations/{id}/artifacts/ реализован
- [ ] POST /api/simulations/{id}/artifacts/ реализован
- [ ] DELETE /api/simulations/{id}/artifacts/{artifact_id}/ реализован
- [ ] GET /api/simulations/{id}/related/ реализован
- [ ] Валидация URL и обязательных полей артефакта работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-SD1 (требуется спецификация)

---

## FE-SD1: Frontend для детальной страницы Симуляции

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 8 дней

### Summary
Адаптация UI детальной страницы Симуляции с добавлением блоков артефактов и связанных сущностей

### Description

Адаптировать Frontend для детальной страницы Симуляции:

1. **Компонент SimulationDetailView:**
   - Отображение основной информации симуляции
   - Блок артефактов
   - Блок связанных сущностей
   - Responsive дизайн

2. **Основная информация:**
   - ID симуляции (display_id)
   - Название
   - Статус (бейдж с цветом)
   - Внедрение (кликабельная ссылка)
   - Продукт
   - Даты (создания, запуска, завершения)
   - Автор

3. **Блок артефактов:**
   - Заголовок "Артефакты (N)"
   - Список артефактов (ссылок):
     - Название
     - Тип (business_case/rov/other)
     - URL (показываем сокращенно)
     - Дата добавления
     - Автор
     - Кнопка "Открыть" (открыть URL в новой вкладке)
     - Кнопка "Удалить" (если есть права)
   - Кнопка "Добавить ссылку" (если есть права)
   - Empty state если нет артефактов

4. **Блок связанных сущностей:**
   - Заголовок "Связанные сущности"
   - Секция "Пилоты (N)":
     - Список пилотов
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной пилота
   - Секция "Внедрения (N)":
     - Список внедрений
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной изменения
   - Empty state если нет связей

5. **Диалог добавления артефакта (ссылки):**
   - Поле "Название" (обязательное)
   - Dropdown "Тип" (business_case/rov/other)
   - Поле "Ссылка" (обязательное, URL)
   - Кнопки: "Отмена", "Добавить"

6. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Toast уведомления при успешной загрузке/удалении

7. **API интеграция:**
   - SimulationService.getDetail(id)
   - SimulationService.getArtifacts(id)
   - SimulationService.createArtifact(id, payload)
   - SimulationService.deleteArtifact(id, artifactId)
   - SimulationService.getRelated(id)
   - Обработка ошибок (403, 404, 500)

### Acceptance Criteria

- [ ] SimulationDetailView компонент реализован
- [ ] Основная информация отображается корректно
- [ ] Блок артефактов реализован
- [ ] Добавление ссылки на артефакт работает
- [ ] Валидация URL работает
- [ ] Удаление артефакта (ссылки) работает
- [ ] Блок связанных сущностей реализован
- [ ] Навигация к связанным сущностям работает
- [ ] Отображение "через скоркарты" работает
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty states отображаются
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-SD1 (требуется UI спецификация)
- BE-SD1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-SD1 (1 день)
  ↓
BE-SD1 (3 дня)
  ↓
FE-SD1 (4 дня)
```

**Общая длительность (критический путь):** 8 дней

**Параллельная работа:**
- BE-SD1 может начаться сразу после AN-SD1
- FE-SD1 может начаться только после готовности BE-SD1

---

## ✅ Ключевые особенности страницы

1. **Адаптация существующей страницы** - добавление новых блоков
2. **Блок артефактов** - добавление/удаление ссылок на документы (URL)
3. **Блок связанных сущностей** - отображение связей через Скоркарты
4. **Навигация к связанным сущностям** - клик → детальная страница
5. **Артефакты как URL** - name/type/url, открыть по ссылке
7. **Empty states** - для артефактов и связей
8. **Права доступа** - ПРМ (свой продукт), Методолог, Админ
9. **Responsive дизайн** - адаптация под разные разрешения

---
